hphp/hack/test/typecheck/reactive/test_mutable_params.php.exp
File "test_mutable_params.php", line 11, characters 3-9:
This object's property is being mutated (used as an lvalue)
You cannot set non-mutable object properties in reactive functions (Typing[4202])
